Convert the tests(with database context) to the usage of JUnit 5